--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -20,13 +20,20 @@ a {
 }
 a:hover {
   color: #535bf2;
+} */
+
+body, html {
+  margin: 0;
+  /* display: flex;
+  place-items: center; */
+  /* min-width: 320px; */
+  min-height: 100vh;
+  width: 100%;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+#root {
+  display: felx;
+  flex-direction: column;
   min-height: 100vh;
 }
 
@@ -56,8 +63,8 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: #597394;
+    background-color: #d6d0c5;
   }
   a:hover {
     color: #747bff;
@@ -65,4 +72,14 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+@font-face {
+  font-family: 'organical';
+  src: url('./assets/fonts/organical.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'dogica';
+  src: url('./assets/fonts/dogica.ttf') format('truetype');
 }
