--- a/portfolio/src/components/style sheets/About.css
+++ b/portfolio/src/components/style sheets/About.css
@@ -18,7 +18,7 @@
     line-height: 1.6;
 }
   
-.content-box-left {
+.content-box {
     font-family: 'dogica', sans-serif;
     background: #5971943d;
     border: 1px solid #597394;
@@ -26,46 +26,42 @@
     padding: 1rem 1rem;
     position: relative;
     margin: 1rem;
-}
-
-.content-box-right {
-    font-family: 'dogica', sans-serif;
-    background: #5971943d;
-    border: 1px solid #597394;
-    border-radius: 12px;
-    padding: 1rem 1rem;
-    position: relative;
-    margin: 1rem;
+    max-width: 650px;
+    width: 100%;
 }
   
-.content-box-left h3 {
+.content-box h3 {
     margin-top: 15px;
-    color: #597394;
+    color: #c03c29;
     font-size: .75rem;
 }
-  
-.content-box-right h3 {
+
+.content-box p {
     margin-top: 15px;
     color: #597394;
     font-size: .75rem;
 }
 
 .arrow-image {
-    position: absolute;
-    width: 50px;
-    height: auto;
-    margin: 0 auto 0.5rem;
+    position: relative;
+    width: auto;
+    height: 40px;
+    margin-top: -20px;
+    margin-bottom: -30px;
+    z-index: 2;
 }
-  
-.experience-box.left .arrow-image {
-    margin-left: 81%;
-    margin-top: -3%;
-    transform: rotate(25deg)
+
+.experience-boxes {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* horizontally center children */
 }
-  
-.experience-box.right .arrow-image {
-    margin-left: 7%;
-    margin-top: -3%;
-    transform: rotate(-25deg)
+
+.experience-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    max-width: 650px;
+    position: relative;
 }
-  
