--- a/portfolio/src/components/style sheets/About.css
+++ b/portfolio/src/components/style sheets/About.css
@@ -30,7 +30,7 @@
     width: 100%;
 }
   
-.content-box h3 {
+.about-section .content-box h3 {
     margin-top: 15px;
     color: #c03c29;
     font-size: .75rem;
