--- a/portfolio/src/components/style sheets/About.css
+++ b/portfolio/src/components/style sheets/About.css
@@ -1,17 +1,18 @@
 .about-section {
-    padding: 4rem 2rem;
+    padding: .5rem 2rem;
     min-height: 100vh;
 }
   
 .about-heading {
     text-align: center;
+    margin-top: auto;
     font-family: 'dogica', sans-serif;
     font-size: 1.5rem;
 }
   
 .about-summary {
     max-width: 600px;
-    margin: 0 auto 4rem;
+    margin: 0 auto 1rem;
     text-align: center;
     font-family: 'dogica', sans-serif;
     font-size: .75rem;
@@ -62,6 +63,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    margin: .75rem;
     max-width: 650px;
     position: relative;
 }
