--- a/portfolio/src/components/style sheets/Navbar.css
+++ b/portfolio/src/components/style sheets/Navbar.css
@@ -1,17 +1,17 @@
 .navbar {
-    position: sticky;
-    top: 20px;
-    z-index: 1;
     background-color: #5971943d;
     padding: 10px 20px;
-    margin: 10px;
-    margin-top: -2rem;
     border: 1px solid #597394;
     border-radius: 12px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     backdrop-filter: blur(5px);
+
+    width: calc(100% - 40px);
+    margin: 1rem auto;
+    max-width: 950px;
+    box-sizing: border-box;
   }
   
   .nav-links {
