--- a/portfolio/src/components/style sheets/Home.css
+++ b/portfolio/src/components/style sheets/Home.css
@@ -37,7 +37,7 @@ html, body, #root {
 
 /* typography */
 .name-title {
-  font-family: 'organical', sans-serif;
+  font-family: 'keyboard', sans-serif;
   font-size: 6rem;
   margin: 0;
 }
