--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,27 +1,3 @@
-/* :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-} */
-
 body, html {
   margin: 0;
   /* display: flex;
@@ -77,6 +53,11 @@ button:focus-visible {
 @font-face {
   font-family: 'organical';
   src: url('./assets/fonts/organical.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'keyboard';
+  src: url('./assets/fonts/keyboard.otf') format('truetype');
 }
 
 @font-face {
